--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="js/three.js"></script>
         <script src="view-organization.js"></script>
 		<script>
-			
+			ViewOrganization.init();
 		</script>
 	</body>
 </html>
