just some change

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <script src="js/three.js"></script>
         <script src="view-organization.js"></script>
 		<script>
+			ViewOrganization.addNode("1","2","3")
+			ViewOrganization.addNode("4","5","6")
 			ViewOrganization.init();
 		</script>
 	</body>
